change in servies spellings

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <img src="assets/img/logo.png" alt="" height="60"  width="130">
       </a>
     </div>
-    <div class="col-4 mt-2"> 
+    <div class="col-4 mt-2 ps-4"> 
       <a class="nav-item nav-link" href="male.html" id="navlink2">
         <img src="assets/img/menscilinicfinallogo.png" alt="" height="60"  width="150">
       </a>
@@ -764,17 +764,17 @@
                         <!-- <li>Vaginal Rejuvenation</li> -->
                         <li><a href="femalenonsurgical.html#vaginal-rejuvenation">Vaginal Rejuvenation</a></li>
                         <li><a href="femalenonsurgical.html#urinary-incontinence">Urinary Incontinence</a></li>
-                        <li><a href="femalenonsurgical.html#vaginal-dryness-and-infection">Vaginal Dryness & Infection</a></li>
+                        <li><a href="femalenonsurgical.html#vaginal-dryness-and-infection">Vaginal Dryness  & <span class="ms-4 text-light">Infection</span> </a></li>
                         <li><a href="femalenonsurgical.html#vaginal-discharge">Vaginal Discharge </a></li>
-                        <li><a href="femalenonsurgical.html#post-delivery-rehabilitation"> Post Delivery Rehabilitation </a></li>
+                        <li><a href="femalenonsurgical.html#post-delivery-rehabilitation"> Post Delivery <span class="ms-4 text-light">Rehabilitation</span>   </a></li>
                         <li><a href="femalenonsurgical.html#g-shot">G-Shot </a></li>
                         <li><a href="femalenonsurgical.html#o-shot"> O-Shot </a></li>
-                        <li><a href="femalenonsurgical.html#female-sexual-dysfunction">Female Sexual Dysfunction </a></li>
+                        <li><a href="femalenonsurgical.html#female-sexual-dysfunction">Female Sexual <span class="ms-4 text-light">Dysfunction</span>   </a></li>
                         <li><a href="femalenonsurgical.html#laser-hair-reduction">Laser Hair Reduction</a></li>
-                        <li> <a href="femalenonsurgical.html#bikini-laser-hair-removal"> Bikini Laser Hair Removal </a></li>
+                        <li> <a href="femalenonsurgical.html#bikini-laser-hair-removal"> Bikini Laser Hair <span class="ms-4 text-light"> Removal</span>   </a></li>
                         <li><a href="femalenonsurgical.html#vulva-hair-reduction">Vulva Hair Reduction </a></li>
                         <!-- <li><a href="femalenonsurgical.html#senatine-peels"> Senatine Peels </a> </li> -->
-                        <li><a href="femalenonsurgical.html#strech-mark-management">Strech Mark Management </a></li>
+                        <li><a href="femalenonsurgical.html#strech-mark-management">Stretch Mark <span class="ms-4 text-light">Management</span>   </a></li>
                     </div>
                     <div class="col-lg-6"> 
                         <li><a href="femalenonsurgical.html#breast-sagging">Breast Sagging </a></li>
@@ -787,7 +787,7 @@
                         <!-- <li><a href="femalenonsurgical.html#body-peels">Body Peels </a> </li> -->
                         <li><a href="femalenonsurgical.html#hollywood-facial">Hollywood Facial</a> </li>
                         <li><a href="femalenonsurgical.html#medi-facial">Medi Facial </a> </li>
-                        <li><a href="femalenonsurgical.html#hand-and-feet-rejuvenation">Hand and Feet Rejuvenation </a> </li>
+                        <li><a href="femalenonsurgical.html#hand-and-feet-rejuvenation">Hand and Feet <span class="ms-4 text-light">Rejuvenation</span>   </a> </li>
                         <li><a href="femalenonsurgical.html#tattoo-removal">Tattoo Removal </a></li>
                         <li><a href="femalenonsurgical.html#menopause">Menopause </a> </li>
                         <li><a href="femalenonsurgical.html#ankle-scar-management">Scar Management</a> </li>
@@ -852,8 +852,8 @@
                   aria-labelledby="panelsStayOpen-headingFour">
                   <div class="accordion-body" style="background-color: #00304D; color: #ffff;">
 
-                    <li><a href="ExectileDysfunctionProcedure.html#focused-extracorporeal-shock-wave-therapy">Focused Extracorporeal Shockwave Therapy</a></li>
-                    <li><a href="ExectileDysfunctionProcedure.html#hifem-chair">HIFEM Chair (Emsella Chair)</a></li>
+                    <li><a href="ExectileDysfunctionProcedure.html#focused-extracorporeal-shock-wave-therapy">Focused Extracorporeal <span class="ms-4 text-light">Shockwave Therapy</span>  </a></li>
+                    <li><a href="ExectileDysfunctionProcedure.html#hifem-chair">HIFEM Chair (Emsella <span class="ms-4 text-light">  Chair)</span>  </a></li>
                     <li><a href="ExectileDysfunctionProcedure.html#p-shot">P-Shot</a></li>
                     <a href="ExectileDysfunctionProcedure.html" class="btn btn-dark mt-3 mb-3 ">Click Here</a>
                   </div>
