change in bootstrap collapse

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
   <!-- ENDING   WHY CHOOSE -->
 
   <!-- VAGINAL REJUVENATION -->
-
+                          
   <section id="vaginal-rejuvenation" class="d-none d-md-block d-lg-block">
     <div class="container-fluid Vaginalrejuvenation p-5">
       <div class="container">
@@ -751,17 +751,16 @@
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse"
                     data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
-                    aria-controls="panelsStayOpen-collapseOne">
-                    FEMALE (NON SURGICAL)
+                    aria-controls="panelsStayOpen-collapseOne"   style="background-color: white;">
+                    FEMALE (NON SURGICAL) 
                   </button>
                 </h2>
-                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" 
                   aria-labelledby="panelsStayOpen-headingOne">
                   <div class="accordion-body" style="background-color: #00304D; color: #ffff;">
                   <div class="container">
                     <div class="row"> 
                      <div class="col-lg-6"> 
-                        <!-- <li>Vaginal Rejuvenation</li> -->
                         <li><a href="femalenonsurgical.html#vaginal-rejuvenation">Vaginal Rejuvenation</a></li>
                         <li><a href="femalenonsurgical.html#urinary-incontinence">Urinary Incontinence</a></li>
                         <li><a href="femalenonsurgical.html#vaginal-dryness-and-infection">Vaginal Dryness  & <span class="ms-4 text-light">Infection</span> </a></li>
@@ -773,18 +772,15 @@
                         <li><a href="femalenonsurgical.html#laser-hair-reduction">Laser Hair Reduction</a></li>
                         <li> <a href="femalenonsurgical.html#bikini-laser-hair-removal"> Bikini Laser Hair <span class="ms-4 text-light"> Removal</span>   </a></li>
                         <li><a href="femalenonsurgical.html#vulva-hair-reduction">Vulva Hair Reduction </a></li>
-                        <!-- <li><a href="femalenonsurgical.html#senatine-peels"> Senatine Peels </a> </li> -->
                         <li><a href="femalenonsurgical.html#strech-mark-management">Stretch Mark <span class="ms-4 text-light">Management</span>   </a></li>
                     </div>
                     <div class="col-lg-6"> 
                         <li><a href="femalenonsurgical.html#breast-sagging">Breast Sagging </a></li>
                         <li><a href="femalenonsurgical.html#facial-rejuvenation">Facial </a>Rejuvenation</li>
-                        <!-- <li> <a href="femalenonsurgical.html#melasma">Melasma </a></li> -->
                         <li><a href="femalenonsurgical.html#hair-loss-treatments">Hair Loss Treatments </a></li>
                         <li><a href="femalenonsurgical.html#prp">PRP </a></li>
                         <li><a href="femalenonsurgical.html#mommy-make-over">Mommy Make Over </a></li>
                         <li><a href="femalenonsurgical.html#under-arm-peels">Underarm Peels </a></li>
-                        <!-- <li><a href="femalenonsurgical.html#body-peels">Body Peels </a> </li> -->
                         <li><a href="femalenonsurgical.html#hollywood-facial">Hollywood Facial</a> </li>
                         <li><a href="femalenonsurgical.html#medi-facial">Medi Facial </a> </li>
                         <li><a href="femalenonsurgical.html#hand-and-feet-rejuvenation">Hand and Feet <span class="ms-4 text-light">Rejuvenation</span>   </a> </li>
@@ -799,13 +795,15 @@
                 </div>
               </div>
 
+
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
-                    aria-controls="panelsStayOpen-collapseTwo">
-                    FEMALE (SURGICAL)
-                  </button>
+                  data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                  aria-controls="panelsStayOpen-collapseTwo">
+                   FEMALE (SURGICAL)
+               </button>
+          
                 </h2>
                 <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                   aria-labelledby="panelsStayOpen-headingTwo">
@@ -820,6 +818,7 @@
                   </div>
                 </div>
               </div>
+
 
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
@@ -863,7 +862,7 @@
           </div>
           <!--  ENDING BOOTSTRAP  ACCORDION -->
           <div class="col-lg-6 col-sm-12 col-md-12 mt-5">
-            <div id="videoContent" style="display: block;" >
+            <div id="videoContent" style="display: block;">
               <video src="assets/img/home_video.mp4" width="100%" autoplay loop muted></video>
             </div> 
           </div>
