--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -132,7 +132,7 @@
     <div class="container-fluid mb-5 mt-5">
         <!-- <div class="row">  -->
             <h3 class="pb-3">Exectile Dysfunction Procedure</h3>
-             <img src="assets/img/Exectiledysfunctionmainimg.png" class="img-fluid" alt="">
+             <img src="assets/img/Aruna 1513 477.png" class="img-fluid" alt="">
         <!-- </div> -->
     </div>
   </section>
