videos  and copy wright added

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </a>
         <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
           <div class="d-flex align-items-center">
-            <img src="assets/img/phone.svg" alt="">
-            <h5 class="ml-2">+7997990181</h5>
+            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+            <h5 class="ml-2">&nbsp;+7997990181</h5>
           </div>
         </a>
         <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2">
@@ -74,9 +74,9 @@
     <div class="navbar-nav ml-auto justify-content-between">
       <a class="nav-item nav-link" href="#" id="navlink1">
         <div class="d-flex align-items-center">
-          <img src="assets/img/phone.svg" alt="">
-          <h5 class="ml-2">+7997990181</h5>
-        </div>
+            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+            <h5 class="ml-2">&nbsp;+7997990181</h5>
+          </div>
       </a>
       <a class="nav-item nav-link mt-2" href="index.html" id="navlink2">
         <h5>Home</h5>
@@ -125,9 +125,10 @@
       <span class="slant-shadow">.</span>
       <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
         <div class="d-flex align-items-center">
-          <img src="assets/img/phone.svg" alt="">
-          <h5 class="ml-2">+7997990181</h5>
+          <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+          <h5 class="ml-2">&nbsp;+7997990181</h5>
         </div>
+        
       </a>
       <!-- <span class="slant-shadow">.</span> -->
       <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2" >
@@ -170,9 +171,9 @@
       </a> -->
       <!-- <a class="nav-item nav-link" href="#" id="navlink1">
         <div class="d-flex align-items-center">
-          <img src="assets/img/phone.svg" alt="">
-          <h5 class="ml-2 text-dark">+7997990181</h5>
-        </div>
+            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+            <h5 class="ml-2">&nbsp;+7997990181</h5>
+          </div>
       </a> -->
       <div class="row"> 
           <div class="col-6"> 
@@ -308,7 +309,7 @@
             </a>
           </div>
           <div class="col-lg-3">
-            <a href="#ourservices">
+            <a href="#vaginal-rejuvenation">
               <p>Services</p>
             </a>
           </div>
@@ -951,6 +952,25 @@
   </footer>
 
    <!-- ENDING  FOOTER -->
+   <div class="footer-area-bottom theme-bg pt-3"  style="background-color: #00527E;">
+    <div class="container">
+       <div class="row">
+          <div class="col-xl-8 col-lg-8 col-md-12 col-12">
+             <div class="footer-widget__copyright" >
+                <span style="color:white;">  ©2023 Couple Clinic. <i>All Rights Reserved. Designed & Developed by <a href="https://bhavicreations.com/" target="_blank"  style="text-decoration: none ; color:white;">Bhavi Creations </a></i></span>
+             </div>
+          </div> 
+          <div class="col-xl-4 col-lg-4 col-md-12 col-12">
+             <div class="footer-widget__copyright-info info-direction">
+                <ul class="d-flex align-items-center">
+                   <li><a  style="text-decoration: none; color:white;" href="terms.html">Terms and conditions &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a></li>
+                   <li><a style="text-decoration: none; color:white;" href="privacy.html">Privacy policy</a></li>
+                 </ul>
+             </div>
+          </div>
+       </div>
+    </div>
+ </div>
 
   <!-- WhatsApp link -->
   <a href="https://api.whatsapp.com/send?phone=917997990181" class="whatsapp-link shadow" target="_blank">
