--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -50,8 +50,8 @@
      <span class="slant-shadow">.</span>
       <a class="nav-item nav-link mt-3 pt-3" href="#" id="navlink2">
         <div class="d-flex align-items-center">
-          <img src="assets/img/phone.svg" alt="">
-          <h5 class="ml-2">+7997990181</h5>
+          <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+          <h5 class="ml-2">&nbsp;+7997990181</h5>
         </div>
       </a>
       <a class="nav-item nav-link  mt-2" href="appointment.html" id="navlink2" >
@@ -93,8 +93,8 @@
         </a> -->
         <!-- <a class="nav-item nav-link" href="#" id="navlink2">
           <div class="d-flex align-items-center">
-            <img src="assets/img/phone.svg" alt="">
-            <h5 class="ml-2">+7997990181</h5>
+            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+            <h5 class="ml-2">&nbsp;+7997990181</h5>
           </div>
         </a>  -->
         <div class="row mt-3">
@@ -302,6 +302,25 @@
   </footer>
 
    <!-- ENDING  FOOTER -->
+   <div class="footer-area-bottom theme-bg pt-3"  style="background-color: #00527E;">
+    <div class="container">
+       <div class="row">
+          <div class="col-xl-8 col-lg-8 col-md-12 col-12">
+             <div class="footer-widget__copyright" >
+                <span style="color:white;">  ©2023 Couple Clinic. <i>All Rights Reserved. Designed & Developed by <a href="https://bhavicreations.com/" target="_blank"  style="text-decoration: none ; color:white;">Bhavi Creations </a></i></span>
+             </div>
+          </div> 
+          <div class="col-xl-4 col-lg-4 col-md-12 col-12">
+             <div class="footer-widget__copyright-info info-direction">
+                <ul class="d-flex align-items-center">
+                   <li><a  style="text-decoration: none; color:white;" href="terms.html">Terms and conditions &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a></li>
+                   <li><a style="text-decoration: none; color:white;" href="privacy.html">Privacy policy</a></li>
+                 </ul>
+             </div>
+          </div>
+       </div>
+    </div>
+ </div>
 
 
  <!--  scroll down menu -->
