--- a/appointment.html
+++ b/appointment.html
@@ -50,8 +50,8 @@
         <span class="slant-shadow">.</span>
         <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
           <div class="d-flex align-items-center">
-            <img src="assets/img/phone.svg" alt="">
-            <h5 class="ml-2">+7997990181</h5>
+            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+            <h5 class="ml-2">&nbsp;+7997990181</h5>
           </div>
         </a>
         <!-- <span class="slant-shadow">.</span> -->
@@ -84,8 +84,8 @@
         </a>
         <a class="nav-item nav-link" href="#" id="navlink2" style="margin-top: -3%;">
           <div class="d-flex align-items-center">
-            <img src="assets/img/phone.svg" alt="">
-            <h5 class="ml-2">+7997990181</h5>
+            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+            <h5 class="ml-2">&nbsp;+7997990181</h5>
           </div>
         </a>
         <a class="nav-item nav-link mt-2" href="appointment.html" id="navlink2" style="margin-top: -5%;">
