--- a/gallery.html
+++ b/gallery.html
@@ -48,8 +48,8 @@
         <span class="slant-shadow">.</span>
         <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
           <div class="d-flex align-items-center">
-            <img src="assets/img/phone.svg" alt="">
-            <h5 class="ml-2">+7997990181</h5>
+            <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+            <h5 class="ml-2">&nbsp;+7997990181</h5>
           </div>
         </a>
         <!-- <span class="slant-shadow">.</span> -->
@@ -81,8 +81,8 @@
       </a>
       <a class="nav-item nav-link" href="#" id="navlink2">
         <div class="d-flex align-items-center">
-          <img src="assets/img/phone.svg" alt="">
-          <h5 class="ml-2">+7997990181</h5>
+          <img style="margin-top: -6px;" src="assets/img/phone.svg" alt="">
+          <h5 class="ml-2">&nbsp;+7997990181</h5>
         </div>
       </a>          
       <a class="nav-item nav-link" href="appointment.html" id="navlink2">
@@ -101,7 +101,10 @@
   <div class="container-fluid mb-5 mt-5">
       <div class="row"> 
           <h3 class="pb-3">GALLERY</h3>
-
+          <div class="col-md-12 text-center mt-1 mb-5  ">
+            <a href="#" id="button" class="btn btn-primary">Images</a>
+            <a href="galleryvideo.html" id="button" class="btn btn-primary">Videos</a>
+          </div>
             <div class=" container firstpart mb-5">
                 <div class="row"> 
                     <div class="col-lg-4 col-sm-12 col-md-12">
@@ -230,6 +233,25 @@
   </footer>
 
    <!-- ENDING  FOOTER -->
+   <div class="footer-area-bottom theme-bg pt-3"  style="background-color: #00527E;">
+    <div class="container">
+       <div class="row">
+          <div class="col-xl-8 col-lg-8 col-md-12 col-12">
+             <div class="footer-widget__copyright" >
+                <span style="color:white;">  ©2023 Couple Clinic. <i>All Rights Reserved. Designed & Developed by <a href="https://bhavicreations.com/" target="_blank"  style="text-decoration: none ; color:white;">Bhavi Creations </a></i></span>
+             </div>
+          </div> 
+          <div class="col-xl-4 col-lg-4 col-md-12 col-12">
+             <div class="footer-widget__copyright-info info-direction">
+                <ul class="d-flex align-items-center">
+                   <li><a  style="text-decoration: none; color:white;" href="terms.html">Terms and conditions &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a></li>
+                   <li><a style="text-decoration: none; color:white;" href="privacy.html">Privacy policy</a></li>
+                 </ul>
+             </div>
+          </div>
+       </div>
+    </div>
+ </div>
 
   <!--  scroll down menu -->
   <div class="circle-icon-container">
