--- a/gallery.html
+++ b/gallery.html
@@ -108,13 +108,13 @@
             <div class=" container firstpart mb-5">
                 <div class="row"> 
                     <div class="col-lg-4 col-sm-12 col-md-12">
-                      <img src="assets/img/galleryimg2.jpeg"  class="img-fluid" alt="">
+                      <img src="assets/img/gallery9.jpg"  class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-4 col-sm-12 col-md-12">
-                      <img src="assets/img/galleryimg1.jpeg"  class="img-fluid" alt="">
+                      <img src="assets/img/gallery8.jpg"  class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-4 col-sm-12 col-md-12">
-                      <img src="assets/img/galleryimg3.jpeg"  class="img-fluid" alt="">
+                      <img src="assets/img/gallery7.jpg"  class="img-fluid" alt="">
                     </div>
                 </div>
             </div> 
@@ -122,13 +122,17 @@
             <div class=" container firstpart mb-5">
               <div class="row"> 
                   <div class="col-lg-4 col-sm-12 col-md-12">
-                    <img src="assets/img/galleryimg4.jpeg"  class="img-fluid" alt="">
+                    <!-- <img src="assets/img/gallery2.jpg"  class="img-fluid" alt=""> -->
+                    <img src="assets/img/gallery6.jpg"  class="img-fluid" alt="">
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-12">
-                    <img src="assets/img/galleryimg5.jpeg"  class="img-fluid" alt="">
+                    <!-- <img src="assets/img/galleryimg1.jpeg"  class="img-fluid" alt=""> -->
+                    <img src="assets/img/gallery4.jpg"  class="img-fluid" alt="">
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-12">
-                    <img src="assets/img/galleryimg6.jpeg"  class="img-fluid" alt="">
+                    <!-- <img src="assets/img/galleryimg3.jpeg"  class="img-fluid" alt=""> -->
+                    <img src="assets/img/galleryimg2.jpeg"  class="img-fluid" alt="">
+
                   </div>
               </div>
           </div>
@@ -136,13 +140,17 @@
           <div class=" container firstpart mb-5">
             <div class="row"> 
                 <div class="col-lg-4 col-sm-12 col-md-12">
-                  <img src="assets/img/galleryimg7.jpeg"  class="img-fluid" alt="">
+                  <!-- <img src="assets/img/gallery6.jpg"  class="img-fluid" alt=""> -->
+                  <img src="assets/img/galleryimg1.jpeg"  class="img-fluid" alt="">
+
                 </div>
                 <div class="col-lg-4 col-sm-12 col-md-12">
-                  <img src="assets/img/galleryimg8.jpeg"  class="img-fluid" alt="">
+                  <!-- <img src="assets/img/gallery4.jpg"  class="img-fluid" alt=""> -->
+                  <img src="assets/img/galleryimg3.jpeg"  class="img-fluid" alt="">
+
                 </div>
                 <div class="col-lg-4 col-sm-12 col-md-12">
-                  <img src="assets/img/galleryimg9.jpeg"  class="img-fluid" alt="">
+                  <!-- <img src="assets/img/galleryimg9.jpeg"  class="img-fluid" alt=""> -->
                 </div>
             </div>
         </div>
