social media icon added

--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -820,6 +820,14 @@
                   <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/?fbclid=IwAR0jpbJJbL8qf2YJtEdLQ_rXBQ0L1kM9esyIAH5HhG_N-GDL1rxlGPgKryY"
                     target="_blank"><i class="bi bi-instagram text-light"></i></a>
                 </div>
+                <div class="col-1">
+                  <a href="#"
+                    ><i class="bi bi-linkedin text-light"></i></a>
+                </div>
+                <div class="col-1">
+                  <a href="#"
+                    ><i class="bi bi-pinterest text-light"></i></a>
+                </div>
               </div>
             </div>
              
