--- a/index.html
+++ b/index.html
@@ -896,6 +896,14 @@
                   <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/?fbclid=IwAR0jpbJJbL8qf2YJtEdLQ_rXBQ0L1kM9esyIAH5HhG_N-GDL1rxlGPgKryY"
                     target="_blank"><i class="bi bi-instagram text-light"></i></a>
                 </div>
+                <div class="col-1">
+                  <a href="#"
+                    ><i class="bi bi-linkedin text-light"></i></a>
+                </div>
+                <div class="col-1">
+                  <a href="#"
+                    ><i class="bi bi-pinterest text-light"></i></a>
+                </div>
               </div>
             </div>
              
@@ -943,7 +951,14 @@
               <h6>Mon-Fri 8AM-8PM</h6>
               <h6>Sat 8AM-8PM</h6>
               <h6>Sun 8AM-8PM</h6>
+            </div><hr/>
+
+            <div class="row probootstrap-copyright">
+              <div class="col-md-12">
+                <p><small>&copy; 2023 <a href="https://coupleclinic.in/" target="_blank">Couples Clinic</a>. All Rights Reserved. Designed &amp; Developed by <a href="https://bhavicreations.com/" target="_blank">bhavicreations.com</a></p>
+              </div>
             </div>
+
           </div>
         </div>
       </div>
