--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,8 @@
           <div class="container">
             <div class="map-container">
               <!-- get the embeb code from google maps & take the src only & keep that in below iframe src -->
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3816.096802404335!2d82.22205367515548!3d16.96978808384798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a38281a30382825%3A0xf2485c5dc11ff809!2sAruna%20Hospitals!5e0!3m2!1sen!2sin!4v1701453253649!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3816.096802404335!2d82.22205367515548!3d16.96978808384798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a38281a30382825%3A0xf2485c5dc11ff809!2sAruna%20Hospitals!5e0!3m2!1sen!2sin!4v1701453253649!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d238.51052375842332!2d82.22702972660426!3d16.9662659522175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a382900d6ab5e69%3A0xf9c7217f44a2327d!2sAruna%20Hospital%20Couple%20Clinics!5e0!3m2!1sen!2sin!4v1706783106233!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div> 
               <div class="row"> 
                       <div class="col-lg-6  col-sm-12  col-md-12  contactuscontent">
