adding  social  media icons

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
   <div class="fulfilingloveiconbar d-none d-md-block" style="margin-top: 13%; background-color: transparent;">
     <div class="side-btn" id="side-btn-click">
-        <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+        <a href="https://www.facebook.com/Arunacouplesclinic/" target="_blank">
             <img src="assets/img/facebook.png" alt="Facebook">
         </a>
     </div>
@@ -241,9 +241,24 @@
             </a>
         </div>
         <div class="col-lg-3 mt-3">
-            <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/?fbclid=IwAR0jpbJJbL8qf2YJtEdLQ_rXBQ0L1kM9esyIAH5HhG_N-GDL1rxlGPgKryY" target="_blank">
+            <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/" target="_blank">
                 <img src="assets/img/icons8-instagram-48.png" alt="">
             </a>
+        </div>
+        <div class="col-lg-3 mt-3">
+          <a href="#" target="_blank">
+              <img src="assets/img/pinterest.png" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 mt-3">
+            <a href="#" target="_blank">
+                <img src="assets/img/twitter.png" alt="">
+            </a>
+        </div>
+        <div class="col-lg-3 mt-3">
+          <a href="#" target="_blank">
+              <img src="assets/img/linked.png" alt="">
+          </a>
         </div>
         <div class="col-lg-3 mt-3">
           <a href="mailto:arunahospital.999@gmail.com" target="_blank" rel="noopener noreferrer">
@@ -905,6 +920,10 @@
                   <a href="#"
                     ><i class="bi bi-pinterest text-light"></i></a>
                 </div>
+                <div class="col-1">
+                  <a href="#"
+                    ><i class="bi bi-twitter text-light"></i></a>
+                </div>
               </div>
             </div>
              
@@ -956,7 +975,7 @@
 
             <div class="row probootstrap-copyright">
               <div class="col-md-12">
-                <p><small>&copy; 2023 <a href="https://coupleclinic.in/" target="_blank">Couples Clinic</a>. All Rights Reserved. Designed &amp; Developed by <a href="https://bhavicreations.com/" target="_blank">bhavicreations.com</a></p>
+                <!-- <p><small>&copy; 2023 <a href="https://coupleclinic.in/" target="_blank">Couples Clinic</a>. All Rights Reserved. Designed &amp; Developed by <a href="https://bhavicreations.com/" target="_blank">bhavicreations.com</a></p> -->
               </div>
             </div>
 
