adding social media links

--- a/privacy.html
+++ b/privacy.html
@@ -169,7 +169,7 @@
               <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
               <div class="row">
                 <div class="col-1">
-                  <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank"><i
+                  <a href="https://www.facebook.com/Arunacouplesclinic/" target="_blank"><i
                       class="bi bi-facebook text-light"></i></a>
                 </div>
                 <div class="col-1">
@@ -177,8 +177,20 @@
                       class="bi bi-youtube text-light"></i></a>
                 </div>
                 <div class="col-1">
-                  <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/?fbclid=IwAR0jpbJJbL8qf2YJtEdLQ_rXBQ0L1kM9esyIAH5HhG_N-GDL1rxlGPgKryY"
+                  <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/"
                     target="_blank"><i class="bi bi-instagram text-light"></i></a>
+                </div>
+                <div class="col-1">
+                  <a href="https://www.linkedin.com/in/aruna-cople-clinic/" target="_blank"
+                    ><i class="bi bi-linkedin text-light"></i></a>
+                </div>
+                <div class="col-1">
+                  <a href="https://in.pinterest.com/arunahospitalkakinada2023/"  target="_blank"
+                    ><i class="bi bi-pinterest text-light"></i></a>
+                </div>
+                <div class="col-1">
+                  <a href="https://twitter.com/HospitalAr11055"  target="_blank"
+                    ><i class="bi bi-twitter text-light"></i></a>
                 </div>
               </div>
             </div>
