--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div>
         <div class="col-6 ps-5"> 
             <a class="nav-item nav-link mt-2 text-dark" href="#" id="navlink6">
-              <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+              <!-- <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
                 <img src="assets/img/facebook.png" alt="Facebook">
             </a>
             <br>
@@ -209,8 +209,31 @@
             <br>
             <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
               <img src="assets/img/gmail.png" alt="">
+            </a> -->
+            <a href="https://www.facebook.com/Arunacouplesclinic/" target="_blank">
+              <img src="assets/img/facebook.png" alt="Facebook">
+           </a>
+           <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank">
+            <img src="assets/img/icons8-youtube-48.png" alt="">
+           </a>
+           <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/" target="_blank">
+            <img src="assets/img/icons8-instagram-48.png" alt="">
+          </a>
+          <a href="https://in.pinterest.com/arunahospitalkakinada2023/" target="_blank">
+            <img src="assets/img/pinterest.png" alt="">
+          </a>
+          <a href="https://twitter.com/HospitalAr11055" target="_blank">
+            <img src="assets/img/twitter.png" alt="">
+          </a>
+          <a href="https://www.linkedin.com/in/aruna-cople-clinic/" target="_blank">
+            <img src="assets/img/linked.png" alt="">
+          </a>
+          <a href="mailto:arunahospital.999@gmail.com" target="_blank" rel="noopener noreferrer">
+            <img src="assets/img/gmail.png" alt="">
+          </a>
+
             </a>
-            </a>         
+                     
         </div>
         <div class="appoiment text-center">
           <a class="nav-item nav-link mt-2 pt-4 text-center d-flex justify-content-center" href="appointment.html" id="navlink7">
@@ -246,17 +269,17 @@
             </a>
         </div>
         <div class="col-lg-3 mt-3">
-          <a href="#" target="_blank">
+          <a href="https://in.pinterest.com/arunahospitalkakinada2023/" target="_blank">
               <img src="assets/img/pinterest.png" alt="">
           </a>
         </div>
         <div class="col-lg-3 mt-3">
-            <a href="#" target="_blank">
+            <a href="https://twitter.com/HospitalAr11055" target="_blank">
                 <img src="assets/img/twitter.png" alt="">
             </a>
         </div>
         <div class="col-lg-3 mt-3">
-          <a href="#" target="_blank">
+          <a href="https://www.linkedin.com/in/aruna-cople-clinic/" target="_blank">
               <img src="assets/img/linked.png" alt="">
           </a>
         </div>
@@ -901,7 +924,7 @@
               <h5>We offer A Range of state-of-the-Art Treatments To Make You Look And Feel You Best.</h5>
               <div class="row">
                 <div class="col-1">
-                  <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank"><i
+                  <a href="https://www.facebook.com/Arunacouplesclinic/" target="_blank"><i
                       class="bi bi-facebook text-light"></i></a>
                 </div>
                 <div class="col-1">
@@ -909,19 +932,19 @@
                       class="bi bi-youtube text-light"></i></a>
                 </div>
                 <div class="col-1">
-                  <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/?fbclid=IwAR0jpbJJbL8qf2YJtEdLQ_rXBQ0L1kM9esyIAH5HhG_N-GDL1rxlGPgKryY"
+                  <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/"
                     target="_blank"><i class="bi bi-instagram text-light"></i></a>
                 </div>
                 <div class="col-1">
-                  <a href="#"
+                  <a href="https://www.linkedin.com/in/aruna-cople-clinic/" target="_blank"
                     ><i class="bi bi-linkedin text-light"></i></a>
                 </div>
                 <div class="col-1">
-                  <a href="#"
+                  <a href="https://in.pinterest.com/arunahospitalkakinada2023/"  target="_blank"
                     ><i class="bi bi-pinterest text-light"></i></a>
                 </div>
                 <div class="col-1">
-                  <a href="#"
+                  <a href="https://twitter.com/HospitalAr11055"  target="_blank"
                     ><i class="bi bi-twitter text-light"></i></a>
                 </div>
               </div>
