--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 
 
 
+        <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-MSFQ5XW161"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-MSFQ5XW161');
+      </script>
+
+
+
 </head>
 
 <body id="main_img">
