--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Couple Clinic</title>
+   
+  <meta charset="UTF-8">
+
+
+
+  <meta name="title" content=" Aruna Couples Clinic | Erectile Dysfunction Procedure | Urine leakage treatment in kakinada 
+  ">
+  
+  <meta name="description" content=" Explore effective erectile dysfunction ED procedures like penile implants, revascularization, injections,urine leakage and shockwave therapy for improved sexual function
+  ">
+
+  <meta name="keywords" content=" Best  HIFEM chair treatment in kakinada,
+  Best  HIFEM chair treatment near me,
+Best  HIFEM chair treatment hospital in kakinada,
+  Best extracorporeal shock wave Therapy in kakinada,
+  Best extracorporeal shock wave Therapy near me,
+  Best extracorporeal shock wave Therapy hospital in kakinada,
+  Best p shot treatment in kakinada,
+  Best p shot treatment near me,
+  Best p shot treatment hospital in kakinada,
+">
+
+
+
+
+  <title>Couple Clinic</title>
 
     <!-- Adding Style Sheet -->
 
