--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Couple Clinic</title>
+    
+  <meta charset="UTF-8">
+
+
+
+  <meta name="title" content=" Contact Us | Best female sex problems treatment in Kakinada
+  ">
+  
+  <meta name="description" content="Discover the best sex problems treatment in kakinada : Aruna Couples Clinic. Experience expert care and tailored solutions for your relationship needs
+  ">
+
+  <meta name="keywords" content=" Best cosmetic gynecology hospital in kakinada,
+  Best cosmetic gynecologist in kakinada,
+  Best Vaginal rejuvenation treatment in kakinada, 
+  Best Erectile dysfunction treatment in kakinada ,
+  Best  G shot treatment in kakinada ,
+  Best O shot treatment in kakinada ,
+  Best Urine leakage treatment in kakinada,
+    Best  sex problems specialist in kakinada,
+  Best sex specialist hospital in kakinada,
+  Best sex specialist doctor in kakinada,
+
+">
+
+
+
+
+  <title>Couple Clinic</title>
 
     <!-- Adding Style Sheet -->
 
