--- a/femalesurgical.html
+++ b/femalesurgical.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Couple Clinic</title>
+  
+  <meta charset="UTF-8">
+
+
+
+  <meta name="title" content=" Aruna Couples Clinic | Best female Surgical and non surgical treatment
+  ">
+  
+  <meta name="description" content=" Discover the best female surgical and non surgical treatments in Kakinada at Aruna Clinic. Our specialists offer effective solutions tailored to your needs
+  ">
+
+  <meta name="keywords" content=" Best female surgical treatment in kakinada,
+  Best cosmetic gynecology hospital in kakinada,
+  Best cosmetic gynecology treatment in kakinada,
+  Best cosmetic gynecologist in kakinada,
+  Best cosmetic gynecology doctor in kakinada,
+  Best Hymenoplasty treatment in kakinada,
+    Best  labiaplasty treatment in kakinada,
+    Best clitoral hood reduction treatment in kakinada,
+    Best clitoral unhooding treatment in kakinada,
+    Best clitoral unhooding surgery hospital in kakinada,
+    Best monsplasty treatment in kakinada,
+    Best monsplasty surgery hospital in kakinada,
+    Best female beauty care hospital in kakinada,
+    Best female beauty treatment in kakinada ,
+    Best female sex specialist in kakinada ,
+    Best ladies doctor in kakinada,
+    Best female private parts specialist in kakinada,
+  Best female private parts treatment in kakinada,
+  Best female private parts doctor in kakinada,
+
+">
+
+
+
+
+  <title>Couple Clinic</title>
 
     <!-- Adding Style Sheet -->
 
