--- a/privacy.html
+++ b/privacy.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Couple Clinic</title>
+  
+  <meta charset="UTF-8">
 
+
+
+  <meta name="title" content=" ">
+  
+  <meta name="description" content=" ">
+
+  <meta name="keywords" content=" ">
+
+
+
+
+  <title>Couple Clinic</title>
     <!-- Adding Style Sheet -->
 
     <link rel="stylesheet" href="assets/style.css">
