seo changes updaetd with images rename and seo tittle and meta tag and descrption added

--- a/gallery.html
+++ b/gallery.html
@@ -120,13 +120,13 @@
             <div class=" container firstpart mb-5">
                 <div class="row"> 
                     <div class="col-lg-4 col-sm-12 col-md-12">
-                      <img src="assets/img/gallery9.jpg"  class="img-fluid" alt="">
+                      <img src="assets/img/happy__pongal_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-4 col-sm-12 col-md-12">
-                      <img src="assets/img/gallery8.jpg"  class="img-fluid" alt="">
+                      <img src="assets/img/Happy_bhogi_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-4 col-sm-12 col-md-12">
-                      <img src="assets/img/gallery7.jpg"  class="img-fluid" alt="">
+                      <img src="assets/img/happy_christmas_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
                     </div>
                 </div>
             </div> 
@@ -135,15 +135,15 @@
               <div class="row"> 
                   <div class="col-lg-4 col-sm-12 col-md-12">
                     <!-- <img src="assets/img/gallery2.jpg"  class="img-fluid" alt=""> -->
-                    <img src="assets/img/gallery6.jpg"  class="img-fluid" alt="">
+                    <img src="assets/img/happy_new_year_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-12">
                     <!-- <img src="assets/img/galleryimg1.jpeg"  class="img-fluid" alt=""> -->
-                    <img src="assets/img/gallery4.jpg"  class="img-fluid" alt="">
+                    <img src="assets/img/happy_diwali_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-12">
                     <!-- <img src="assets/img/galleryimg3.jpeg"  class="img-fluid" alt=""> -->
-                    <img src="assets/img/galleryimg2.jpeg"  class="img-fluid" alt="">
+                    <img src="assets/img/erectile_dysfunctiont_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
 
                   </div>
               </div>
@@ -153,7 +153,7 @@
             <div class="row"> 
                 <div class="col-lg-4 col-sm-12 col-md-12">
                   <!-- <img src="assets/img/gallery6.jpg"  class="img-fluid" alt=""> -->
-                  <img src="assets/img/galleryimg1.jpeg"  class="img-fluid" alt="">
+                  <img src="assets/img/say_no_to_incontinence_Aruna_Couples_Clinic.png"  class="img-fluid" alt="">
 
                 </div>
                 <div class="col-lg-4 col-sm-12 col-md-12">
