--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ Best  sex problems specialist in kakinada,,
                   </div>
                   <div class="col-lg-6 col-sm-6 col-md-12">
                     <!-- <img src="assets/img/image1.png" alt="" height="auto" class="img-fluid" width="auto"> -->
-                    <img src="assets/img/Aruna 522505.png" alt="" height="auto" class="img-fluid" width="auto">
+                    <img src="assets/img/best_couples_clinic_in_kakinada_aruna_couples_clinic.png" alt="" height="auto" class="img-fluid" width="auto">
                   </div>
                 </div>
               </div>
@@ -429,7 +429,7 @@ Best  sex problems specialist in kakinada,,
       <div class="row">
         <div class="col-lg-6 col-sm-12 col-md-12">
           <!-- <img src="assets/img/image2.png" class="img-fluid" alt=""> -->
-          <img src="assets/img/Aruna 570521.png" class="img-fluid" alt="">
+          <img src="assets/img/Best_Cosmetic_Gynecology_aruna_couples_clinic.png" class="img-fluid" alt="">
 
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12 p-5 mt-5">
@@ -614,7 +614,7 @@ Best  sex problems specialist in kakinada,,
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12">
           <!-- <img src="assets/img/image3.png" class="img-fluid" alt=""> -->
-          <img src="assets/img/Aruna 521477.png" class="img-fluid" alt="">
+          <img src="assets/img/leading_cosmetic_gynecology_hospital_in_kakinada_aruna_couples_clinic.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -779,7 +779,7 @@ Best  sex problems specialist in kakinada,,
             <div id="additionalContent1" style="display: none;">
               <!-- Additional content for the first accordion -->
               <h1 class="text-center mb-3">Female Non Surgical</h1>
-              <img src="assets/img/services 1.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/best_non-surgical_treatment_hospital_aruna_couples_clinic.png" alt="" class="img-fluid mb-4">
               <h6>At Aruna Hospital Couple Clinics, we understand that every woman is unique, and so are her beauty
                 goals. Step into a world where we celebrate your individuality and offer a range of non-surgical
                 treatments tailored to enhance your natural radiance.</h6>
@@ -792,7 +792,7 @@ Best  sex problems specialist in kakinada,,
             <div id="additionalContent2" style="display: none;">
               <!-- Additional content for the second accordion -->
               <h1 class="text-center mb-3">Female Surgical</h1>
-              <img src="assets/img/services2.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/best_surgical_treatment_in_kakinada_aruna_couples_clinic.png" alt="" class="img-fluid mb-4">
               <h6>At Aruna Hospital Couple Clinics, we understand the importance of surgical excellence in achieving
                 transformative and lasting results. Step into a realm where our skilled surgeons combine artistry with
                 precision to enhance your beauty through surgical treatments tailored to your unique desires.</h6>
@@ -805,7 +805,7 @@ Best  sex problems specialist in kakinada,,
             <div id="additionalContent3" style="display: none;">
               <!-- Additional content for the third accordion -->
               <h1 class="text-center mb-3">Male</h1>
-              <img src="assets/img/services3.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/best_male_treatment_in_kakinada_aruna_couples_clinic.png" alt="" class="img-fluid mb-4">
               <h6>At Aruna Hospital, where we prioritize the health and well-being of every individual. Our commitment
                 extends to providing specialized and comprehensive treatments designed specifically for men.</h6>
               <!-- ... Your content ... -->
@@ -820,7 +820,7 @@ Best  sex problems specialist in kakinada,,
               <div class="smallandmedium">
                 <h3 class="mb-3">Erectile Dysfunction Procedure</h3>
               </div>
-              <img src="assets/img/services4.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/best_Erectile_Dysfunction_Procedure_in_kakinada_aruna_couples_clinic.png" alt="" class="img-fluid mb-4">
               <h6>At Aruna Hospital, we pride ourselves on offering cutting-edge medical care supported by advanced
                 equipment. Our state-of-the-art facilities include diagnostic tools like MRI and CT scanners, ensuring
                 precise and comprehensive imaging. From high-tech surgical instruments to modern patient monitoring
