--- a/appointment.html
+++ b/appointment.html
@@ -118,7 +118,7 @@
             <div class="row"> 
                 <div class="col-lg-6  col-sm-12 col-md-12  mt-5 pt-5 mainsectionimage">
                      <!-- <img src="assets/img/appointment.png" alt="" height="auto" width="auto"> -->
-                     <img src="assets/img/appointment 546  392 (1).png" class="img-fluid mt-3" alt="">
+                     <img src="assets/img/appointment_for_couples_clinic_aruna_couples_clinic.png" class="img-fluid mt-3" alt="">
                 </div>
                 <div class="col-lg-6 col-sm-12 col-md-12">
                     <h1 class="mt-4 ms-5 pt-2">Make An appointment</h1>
