--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
       <div class="container p-4 "> 
         <div class="row">
           <div class="col-lg-6  col-md-12  col-sm-12 mt-5">
-             <img src="assets/img/contact.png" class="img-fluid" alt="" >   
+             <img src="assets/img/contact_Aruna_Couples_Clinic.png" class="img-fluid" alt="" >   
           </div>
           <div class="col-lg-6  col-md-12  col-sm-12">
             <h1 class="mt-5 ms-5">Get In touch</h1>
