--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -29,6 +29,7 @@ Best  HIFEM chair treatment hospital in kakinada,
   <title>Couple Clinic</title>
 
     <!-- Adding Style Sheet -->
+    <link rel="icon" href="assets/img/aruna couple clinic  fav-icon.png" type="image/x-icon">
 
     <link rel="stylesheet" href="assets/style.css">
 
