--- a/appointment.html
+++ b/appointment.html
@@ -17,7 +17,7 @@
 
   <title>Couple Clinic</title>
       <!-- Adding Style Sheet -->
-
+      <link rel="icon" href="assets/img/aruna couple clinic  fav-icon.png" type="image/x-icon">
       <link rel="stylesheet" href="assets/style.css">
 
       <!-- Adding bootstrap plugin -->
