--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
   <title>Couple Clinic</title>
 
     <!-- Adding Style Sheet -->
+    <link rel="icon" href="assets/img/aruna couple clinic  fav-icon.png" type="image/x-icon">
 
     <link rel="stylesheet" href="assets/style.css">
 
