--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,7 @@
     <!-- Adding Style Sheet -->
 
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" href="assets/img/aruna couple clinic  fav-icon.png" type="image/x-icon">
 
     <!-- Adding bootstrap plugin -->
 
