--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ Best  sex problems specialist in kakinada,,
 
 
   <title>Couple Clinic</title>
+  <link rel="icon" href="assets/img/aruna couple clinic  fav-icon.png" type="image/x-icon">
 
   <!-- Adding Style Sheet -->
   <link rel="stylesheet" href="assets/style.css">
