--- a/privacy.html
+++ b/privacy.html
@@ -19,6 +19,7 @@
     <!-- Adding Style Sheet -->
 
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" href="assets/img/aruna couple clinic  fav-icon.png" type="image/x-icon">
 
     <!-- Adding bootstrap plugin -->
 
