meta title and desc changed

--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -6,10 +6,10 @@
 
 
 
-  <meta name="title" content=" Aruna Couples Clinic | Best female sex problems treatment in kakinada
+  <meta name="title" content="Best Vaginal Rejuvenation Treatment in Kakinada | Couple Clinic
   ">
   
-  <meta name="description" content=" Discover the best female sex problems treatment in kakinada at Aruna couples Clinic. Our specialists offer effective solutions tailored to your needs
+  <meta name="description" content="We offer the best Vaginal Tightening treatment in Kakinada at Aruna Couple Clinic. Boost confidence and well-being today!
   ">
 
   <meta name="keywords" content=" Best female non surgical treatment in kakinada,
