--- a/male.html
+++ b/male.html
@@ -6,27 +6,26 @@
 
 
 
-  <meta name="title" content=" Aruna Couples Clinic | Best male sex problems treatment in Kakinada
-  ">
+  <meta name="title" content="Best Erectile Dysfunction & Urinary Leakage Treatment in Kakinada | Aruna Men's Clinic">
   
-  <meta name="description" content="  Discover the best male sex problems treatment in Kakinada at Aruna Couples Clinic. Our specialist doctors are dedicated to resolving relationship challenges effectively.
-  ">
+  <meta name="description" content="We provide the best Erectile Dysfunction & Urinary Leakage treatment in Kakinada at Aruna Men's Couple Clinic. Reclaim confidence today!">
 
   <meta name="keywords" content="
+  Best Erectile Dysfunction & Urinary Leakage Treatment in Kakinada,
   Best men's clinic in kakinada,
   Best urology treatment in kakinada,
   Best urologist in kakinada,
   Best urology treatment hospital near me,
   Best erectile dysfunction treatment in kakinada,
-     Best erectile dysfunction hospital near me,
-     Best urinary incontinence treatment in kakinada,
+  Best erectile dysfunction hospital near me,
+  Best urinary incontinence treatment in kakinada,
   Best urinary incontinence treatment near me,
   Best urine leakage treatment in kakinada,
-    Best premature ejaculation treatment in kakinada,
-     Best  male sexual disorder treatment in kakinada,
- Best  sex specialist in kakinada,
- Best  sex specialist near me,
- Best  sex problems specialist in kakinada,
+  Best premature ejaculation treatment in kakinada,
+  Best  male sexual disorder treatment in kakinada,
+  Best  sex specialist in kakinada,
+  Best  sex specialist near me,
+  Best  sex problems specialist in kakinada,
    Best sex specialist hospital in kakinada,
    Best sex specialist doctor in kakinada ,
    Best sex specialist doctor near me,
